Mon Dec 29 00:41:44 2003  Dave Thomas  <dave@pragprog.com>

	* math.c: Add RDoc comments

Sun Dec 28 20:19:11 2003  Tanaka Akira  <akr@m17n.org>

	* ext/stringio/stringio.c (strio_sysread): StringIO.new.sysread didn't
	  raise EOFError.

	* ext/zlib/zlib.c (gzreader_gets): don't increment lineno when
	  gzfile_read_all returns "".

Sun Dec 28 15:25:08 2003  Dave Thomas  <dave@pragprog.com>

	* class.c,object.c,parse.y,sprintf.c,variable.c: Document classes
	  Object, Module, etc...

Sun Dec 28 11:55:29 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/csv/test_csv.rb: generate bom.csv and mac.csv files on the fly.
	  [ruby-talk:88852]

	* test/csv/{bom.csv,mac.csv}: removed.

Sun Dec 28 08:56:51 2003  Dave Thomas  <dave@pragprog.com>

	* eval.c: Thead[Group] RDoc (thanks to MG)

Sun Dec 28 03:50:05 2003  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser::find_override_comment): 
	  Escape method names used in regexp

Sun Dec 28 01:46:02 2003  Dave Thomas  <dave@wireless_3.local.thomases.com>

	* lib/rdoc/ri/ri_formatter.rb (RI::TextFormatter::display_flow_item):
	  Add support for rules in 'ri' output.

Sun Dec 28 01:35:35 2003  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser::find_body):
	  Sometimes the Ruby source aliases two otherwise
	  unrelated methods (for example Kernel#object_id and
	  Kernel#hash are both the same C function). Provide a
	  facility to allow the methods to be documented
	  separately.

Sun Dec 28 01:05:31 2003  Dave Thomas  <dave@pragprog.com>

	* marshal.c, signal.c: RDoc collemts added by Elliott Hughes

Sun Dec 28 00:46:25 2003  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser::find_class_comment):
	  Some Ruby source uses lower-case class names for the
	  Init_Xxx C function name.

Sat Dec 27 23:41:46 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: fix "test: too many arguments" error.
