@@ -1,3 +1,7 @@
+Mon Dec 29 02:20:54 2003  Dave Thomas  <dave@wireless_3.local.thomases.com>
+
+	* eval.c: Add RDoc for class Proc, Method, UnboundMethod
+
 Mon Dec 29 00:41:44 2003  Dave Thomas  <dave@pragprog.com>
 
 	* math.c: Add RDoc comments
